<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".SessionActivity"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/Backbutton"
            android:layout_width="81dp"
            android:layout_height="40dp"
            android:backgroundTint="#800020"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/end_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_session"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/timer_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_session"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/grid_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/timer_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <!-- TextView for Cell 1 -->
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/cell1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/l1"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell1_small_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_left_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/cell2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/R1"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell2_small_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_left_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/cell3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/l2"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell3_small_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_left_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/cell4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/r2"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell4_small_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_left_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"/>
            </FrameLayout>

            <!-- Similarly, create for other cells (cell2, cell3, cell4) here -->

        </GridLayout>

        <FrameLayout
            android:layout_width="409dp"
            android:layout_height="300dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/videoBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="visible" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>

